--- a/index.html
+++ b/index.html
@@ -309,9 +309,10 @@ ETH / Polygon (ERC20)<br>
 
   <div class="lig1-content">
 
-    <p><strong>Beispiel:</strong><br>
-      Für <strong>1 Euro</strong> bekommst du ca. <strong>900.000 LIG1</strong>.
-    </p>
+    <p id="buyExample">
+  <strong>Beispiel:</strong><br>
+  Für <strong>1 Euro</strong> bekommst du ca. <strong>– LIG1</strong>.
+</p>
 
     <div class="lig1-step">
       <p><strong>1️⃣ App installieren</strong><br>
