--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ function toggleLig1Box() {
 <script>
 (async function () {
   try {
-    const res = await fetch("/marketshield/data/buy-price.json", {
+    const res = await fetch("data/buy-price.json", {
       cache: "no-store"
     });
 
