--- a/index.html
+++ b/index.html
@@ -394,12 +394,14 @@ function toggleLig1Box() {
   document.getElementById("lig1Box").classList.toggle("open");
 }
 </script>
+
 <script>
 (async function () {
   try {
-    const res = await fetch("data/buy-price.json", {
-      cache: "no-store"
-    });
+    const res = await fetch(
+      "https://ligone-token.github.io/ligone-vorsorge/data/buy-price.json",
+      { cache: "no-store" }
+    );
 
     if (!res.ok) {
       throw new Error("buy-price.json nicht erreichbar");
@@ -407,19 +409,20 @@ function toggleLig1Box() {
 
     const data = await res.json();
 
-    if (!data.ligPerEuro || data.ligPerEuro <= 0) {
-      throw new Error("ligPerEuro ungültig");
+    const ligValue = Number(data.ligPerEuro);
+    if (!ligValue || ligValue <= 0) {
+      throw new Error("ligPerEuro fehlt oder ungültig");
     }
 
-    const ligFormatted = data.ligPerEuro.toLocaleString("de-DE");
+    const ligFormatted = ligValue.toLocaleString("de-DE");
 
     const el = document.getElementById("buyExample");
     if (!el) return;
 
     el.innerHTML = `
       <strong>Beispiel:</strong><br>
-      Für <strong>1 Euro</strong> bekommst du ca.
-      <strong>${ligFormatted} LIG1</strong>.
+      Für <strong>1 Euro</strong> bekommst du aktuell
+      <strong>ca. ${ligFormatted} LIG1</strong>.
     `;
   } catch (err) {
     console.warn("⚠️ Buy-Box nicht aktualisiert:", err.message);
