--- a/index.html
+++ b/index.html
@@ -311,8 +311,10 @@ ETH / Polygon (ERC20)<br>
 
     <p id="buyExample">
   <strong>Beispiel:</strong><br>
-  Für <strong>1 Euro</strong> bekommst du ca. <strong>– LIG1</strong>.
+  Für <strong>1 Euro</strong> bekommst du aktuell
+  <strong>ca. 680.000 LIG1</strong>.
 </p>
+
 
     <div class="lig1-step">
       <p><strong>1️⃣ App installieren</strong><br>
