--- a/index.html
+++ b/index.html
@@ -311,9 +311,10 @@ ETH / Polygon (ERC20)<br>
 
     <p id="buyExample">
   <strong>Beispiel:</strong><br>
-  Für <strong>1 Euro</strong> bekommst du aktuell
-  <strong>ca. 680.000 LIG1</strong>.
+  Die <strong>exakte Menge</strong> für <strong>1 €</strong><br>
+  wird <strong>live im Swap</strong> berechnet.
 </p>
+
 
 
     <div class="lig1-step">
