--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Market Shield – Fair informiert</title>
 
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="icon.png" type="image/png">
+  <link rel="icon" href="/marketshield/icon.png" type="image/png">
+
 
   <!-- Open Graph -->
   <meta property="og:title" content="Market Shield – Fair informiert">
